test/flowanalysis/recursion/rec_fun-3.good
rec_fun-3.chpl:2: error: Unable to resolve return type of function 'g'
rec_fun-3.chpl:2: In function 'g':
rec_fun-3.chpl:5: error: Called recursively at this point
